# geoid-globe

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
public/: index.html
public/css/: geoid_globe.css
public/data/: world_boundaries.json
public/js/: geoid_globe.js
src/geoid_globe/: clean_world_geojson.py  convert_raster_to_json.py  generate_geoid.py  pipeline.py
