[project]
authors = [{ name = "Fernando Mazzoni", email = "fernando1mazzoni@gmail.com" }]
dependencies = []
name = "geoid-globe"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
geoid_globe = { path = ".", editable = true }

[tool.pixi.tasks]
preprocess = "python -m geoid_globe.pipeline"
serve = { cmd = "python -m http.server 8000 --directory public", description = "Start a local web server to view the visualization" }

[tool.pixi.dependencies]
pyshtools = ">=4.13.1,<5"
rioxarray = ">=0.20.0,<0.21"
pydantic = ">=2.12.4,<3"
geopandas = ">=0.14.0"

[tool.pixi.feature.dev.dependencies]
ipykernel = "*"
